--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header><h1>CONVERSOR DE TEMPERATURA</h1></header>
     <section>
         <div class="div1">
-        <p class="p1">Digite o valor numérico da temperatura que vai ser convertida abaixo:</p>
+        <p class="p1">Digite o valor numérico da temperatura para ser convertida abaixo:</p>
         <input type="number" id="n1">
         <div class="secdiv">
         <input type="radio" name="radio" checked class="radio" id="race"><span class="cfk">Celsius</span>
